--- a/man/man7/zpool-features.7
+++ b/man/man7/zpool-features.7
@@ -851,14 +851,13 @@ property set to
 .Sy zstd
 are destroyed.
 .feature com.delphix head_errlog no
-This feature enables the upgraded version of errlog.
-This required an on-disk error format change.
-Now the errorlog of each head dataset is stored separately
-in the zap object and keyed by the head id.
+This feature enables the upgraded version of errlog, which required an on-disk
+error log format change.
+Now the errorlog of each head dataset is stored separately in the zap object
+and keyed by the head id.
 With this feature enabled, every dataset affected by an error block is listed
 in the output of
 .Nm zpool Cm status .
-This feature can only be enabled at pool creation time.
 .El
 .Sh SEE ALSO
 .Xr zpool 8
