--- a/man/man4/zfs.4
+++ b/man/man4/zfs.4
@@ -454,7 +454,7 @@ If we have less than this amount of free space,
 most ZPL operations (e.g. write, create) will return
 .Sy ENOSPC .
 .
-.It Sy spa_upgrade_errlog_limit Ns = Ns Sy 0 Pc Pq uint
+.It Sy spa_upgrade_errlog_limit Ns = Ns Sy 0 Pq uint
 Limits the number of on-disk error log entries that will be converted to the
 new format when enabling head_errlog.
 The default is to ignore the setting.
