--- a/man/man4/zfs.4
+++ b/man/man4/zfs.4
@@ -456,7 +456,9 @@ most ZPL operations (e.g. write, create) will return
 .
 .It Sy spa_upgrade_errlog_limit Ns = Ns Sy 0 Pq uint
 Limits the number of on-disk error log entries that will be converted to the
-new format when enabling head_errlog.
+new format when enabling the
+.Sy head_errlog
+feature.
 The default is to ignore the setting.
 .
 .It Sy vdev_removal_max_span Ns = Ns Sy 32768 Ns B Po 32kB Pc Pq int
